# Mineral

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
src/mineral/: app.py  console.py  errors.py  gadgets.py  state.py  types.py  utils.py  window.py  window_manager.py
src/mineral/screen/: window.py  window_manager.py
