[project]
name = "mineral"
version = "0.1.0"
description = "A Python library for building text-based applications that makes printing beautiful output and handling user input simple. Perfect for text RPGs, interactive stories, and terminal tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "windows-curses>=2.4.1; sys_platform == 'win32'",
]

[dependency-groups]
dev = []

[tool.ruff]
line-length = 79
lint.extend-select = ["ANN", "I"]
lint.ignore = ["ANN401", "F"]
lint.fixable = ["I", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 72

[tool.basedpyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "test*.py",
    "venv/",
    "build/",
    "dist/",
    "local/",
    "examples/",
    "docs/",
    "lib_testing/",
    "tests/",
]
reportImportCycles = false
reportUnnecessaryIsInstance = false
reportImplicitStringConcatenation = false
reportUnusedCallResult = false
reportMissingTypeStubs = false
reportAssignmentType = false
reportRedeclaration = false
reportAny = false
reportExplicitAny = false
reportUnknownVariableType = false
reportDeprecated = false
reportImplicitOverride = false
reportUnusedParameter = false
reportIncompatibleVariableOverride = false
reportPossiblyUnboundVariable = false
